Added a new snippet and updated documentation
- Added HTTP request snippet for Apex
- Updated readme and documentation

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "salesforce-snippets",
     "displayName": "Salesforce Snippets",
     "description": "Useful Salesforce snippets to speed up writing code for Salesforce platform",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "publisher": "ajinkya-hingne",
     "engines": {
         "vscode": "^1.31.0"
@@ -35,7 +35,11 @@
         ]
     },
     "icon": "images/icon.png",
-    "homepage": "https://github.com/meajinkya/vscode-wordcount/blob/master/README.md",
+    "galleryBanner": {
+        "color": "#323232",
+        "theme": "dark"
+    },
+    "homepage": "https://github.com/meajinkya/salesforce-snippets/blob/master/README.md",
     "repository": {
         "type": "git",
         "url": "https://github.com/meajinkya/salesforce-snippets.git"
